--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             transition: var(--transition);
             
             /* تم تعديل هذا الجزء */
-            background-image: url('logo.png'); /* قم بوضع اسم الصورة هنا */
+            background-image: url('logo.png'); /* alfagr logo */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -939,4 +939,5 @@
         populateDiameters();
     </script>
 </body>
+
 </html>
