--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             transition: var(--transition);
             
             /* تم تعديل هذا الجزء */
-            background-image: url('logo.png'); /alfagr logo/
+            background-image: url('logo.jpg'); /alfagr logo/
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -941,6 +941,7 @@
 </body>
 
 </html>
+
 
 
 
