--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             
             /* تم تعديل هذا الجزء */
             background-image: url('alfagr_logo.jpg');
-            background-size: cover;
+            background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
         }
@@ -941,6 +941,7 @@
 </body>
 
 </html>
+
 
 
 
