--- a/index.html
+++ b/index.html
@@ -81,13 +81,15 @@
         }
 
         .logo {
-            width: 100px;
-            height: 100px;
+            width: 150px;
+            height: 150px;
             background: white;
             border-radius: 50%;
             margin: 0 auto 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
             transition: var(--transition);
+            object-fit: cover;
+            display: block;
             
             /* تم تعديل هذا الجزء */
             background-image: url('alfagr_logo.jpg');
@@ -941,6 +943,7 @@
 </body>
 
 </html>
+
 
 
 
