--- a/index.html
+++ b/index.html
@@ -480,7 +480,6 @@
             hdpe: {
                 spec: 'DIN 8074/8075',
                 data: {
-                    /* HDPE data unchanged (kept as in your original file) */
                     '20': [
                         { diameter: 20, thickness: 2.3, weight: 0.133, thickness_unit: 'mm', diameter_unit: 'mm' },
                         { diameter: 25, thickness: 2.8, weight: 0.200, thickness_unit: 'mm', diameter_unit: 'mm' },
@@ -509,7 +508,6 @@
                         { diameter: 710, thickness: 79.3, weight: 168.000, thickness_unit: 'mm', diameter_unit: 'mm' },
                         { diameter: 800, thickness: 89.3, weight: 213.000, thickness_unit: 'mm', diameter_unit: 'mm' }
                     ],
-                    /* ... rest of hdpe pressures/data preserved as in your original file ... */
                     '16': [
                         { diameter: 20, thickness: 1.9, weight: 0.112, thickness_unit: 'mm', diameter_unit: 'mm' },
                         { diameter: 25, thickness: 2.3, weight: 0.171, thickness_unit: 'mm', diameter_unit: 'mm' },
@@ -540,7 +538,149 @@
                         { diameter: 900, thickness: 81.7, weight: 219.000, thickness_unit: 'mm', diameter_unit: 'mm' },
                         { diameter: 1000, thickness: 90.8, weight: 271.000, thickness_unit: 'mm', diameter_unit: 'mm' }
                     ],
-                    /* remaining HDPE maps preserved as in your original code */
+                    '12.5': [
+                        { diameter: 20, thickness: 1.8, weight: 0.107, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 25, thickness: 1.9, weight: 0.144, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 32, thickness: 2.4, weight: 0.232, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 40, thickness: 3, weight: 0.356, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 50, thickness: 3.7, weight: 0.549, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 63, thickness: 4.7, weight: 0.873, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 75, thickness: 5.6, weight: 1.240, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 90, thickness: 6.7, weight: 1.770, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 110, thickness: 8.1, weight: 2.620, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 125, thickness: 9.2, weight: 3.370, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 140, thickness: 10.3, weight: 4.220, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 160, thickness: 11.8, weight: 5.500, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 180, thickness: 13.3, weight: 6.980, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 200, thickness: 14.7, weight: 8.560, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 225, thickness: 16.6, weight: 10.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 250, thickness: 18.4, weight: 13.400, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 280, thickness: 20.6, weight: 16.800, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 315, thickness: 23.2, weight: 21.200, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 355, thickness: 26.1, weight: 26.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 400, thickness: 29.4, weight: 34.100, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 450, thickness: 33.1, weight: 43.200, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 500, thickness: 36.8, weight: 53.300, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 560, thickness: 41.2, weight: 66.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 630, thickness: 46.3, weight: 84.600, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 710, thickness: 52.2, weight: 107.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 800, thickness: 58.8, weight: 136.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 900, thickness: 66.1, weight: 172.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1000, thickness: 73.4, weight: 219.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1200, thickness: 88.2, weight: 316.000, thickness_unit: 'mm', diameter_unit: 'mm' }
+                    ],
+                    '10': [
+                        { diameter: 25, thickness: 1.8, weight: 0.137, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 32, thickness: 1.9, weight: 0.187, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 40, thickness: 2.4, weight: 0.295, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 50, thickness: 3, weight: 0.453, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 63, thickness: 3.8, weight: 0.721, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 75, thickness: 4.5, weight: 1.020, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 90, thickness: 5.4, weight: 1.460, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 110, thickness: 6.6, weight: 2.170, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 125, thickness: 7.4, weight: 2.760, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 140, thickness: 8.3, weight: 3.460, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 160, thickness: 9.5, weight: 4.520, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 180, thickness: 10.7, weight: 5.710, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 200, thickness: 11.9, weight: 7.050, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 225, thickness: 13.4, weight: 8.930, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 250, thickness: 14.8, weight: 11.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 280, thickness: 16.6, weight: 13.700, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 315, thickness: 18.7, weight: 17.400, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 355, thickness: 21.1, weight: 22.100, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 400, thickness: 23.7, weight: 28.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 450, thickness: 26.7, weight: 35.400, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 500, thickness: 29.7, weight: 43.800, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 560, thickness: 33.2, weight: 54.800, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 630, thickness: 37.4, weight: 69.400, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 710, thickness: 42.1, weight: 88.100, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 800, thickness: 47.4, weight: 112.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 900, thickness: 53.3, weight: 141.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1000, thickness: 59.3, weight: 175.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1200, thickness: 71.1, weight: 254.000, thickness_unit: 'mm', diameter_unit: 'mm' }
+                    ],
+                    '8': [
+                        { diameter: 40, thickness: 1.9, weight: 0.239, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 50, thickness: 2.4, weight: 0.374, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 63, thickness: 3, weight: 0.580, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 75, thickness: 3.6, weight: 0.828, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 90, thickness: 4.3, weight: 1.180, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 110, thickness: 5.3, weight: 1.770, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 125, thickness: 6, weight: 2.270, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 140, thickness: 6.7, weight: 2.830, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 160, thickness: 7.7, weight: 3.720, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 180, thickness: 8.6, weight: 4.670, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 200, thickness: 9.6, weight: 5.780, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 225, thickness: 10.8, weight: 7.300, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 250, thickness: 11.9, weight: 8.930, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 280, thickness: 13.4, weight: 11.300, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 315, thickness: 15, weight: 14.200, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 355, thickness: 16.9, weight: 18.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 400, thickness: 19.1, weight: 22.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 450, thickness: 21.5, weight: 28.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 500, thickness: 23.9, weight: 35.700, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 560, thickness: 26.7, weight: 44.700, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 630, thickness: 30, weight: 56.400, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 710, thickness: 33.9, weight: 71.800, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 800, thickness: 38.1, weight: 91.100, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 900, thickness: 42.9, weight: 115.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1000, thickness: 47.7, weight: 142.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1200, thickness: 57.2, weight: 205.000, thickness_unit: 'mm', diameter_unit: 'mm' }
+                    ],
+                    '6': [
+                        { diameter: 40, thickness: 1.8, weight: 0.227, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 50, thickness: 2, weight: 0.314, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 63, thickness: 2.5, weight: 0.494, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 75, thickness: 2.9, weight: 0.675, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 90, thickness: 3.5, weight: 0.978, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 110, thickness: 4.2, weight: 1.430, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 125, thickness: 4.8, weight: 1.840, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 140, thickness: 5.4, weight: 2.320, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 160, thickness: 6.2, weight: 3.040, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 180, thickness: 6.9, weight: 3.790, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 200, thickness: 7.7, weight: 4.690, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 225, thickness: 8.6, weight: 5.890, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 250, thickness: 9.6, weight: 7.300, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 280, thickness: 10.7, weight: 9.100, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 315, thickness: 12.1, weight: 11.600, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 355, thickness: 13.6, weight: 14.600, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 400, thickness: 15.3, weight: 18.600, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 450, thickness: 17.2, weight: 23.500, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 500, thickness: 19.1, weight: 28.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 560, thickness: 21.4, weight: 36.200, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 630, thickness: 24.1, weight: 45.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 710, thickness: 27.2, weight: 58.400, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 800, thickness: 30.6, weight: 73.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 900, thickness: 34.4, weight: 93.400, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1000, thickness: 38.2, weight: 115.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1200, thickness: 45.9, weight: 166.000, thickness_unit: 'mm', diameter_unit: 'mm' }
+                    ],
+                    '4': [
+                        { diameter: 63, thickness: 1.8, weight: 0.364, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 75, thickness: 1.9, weight: 0.457, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 90, thickness: 2.2, weight: 0.643, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 110, thickness: 2.7, weight: 0.943, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 125, thickness: 3.1, weight: 1.230, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 140, thickness: 3.5, weight: 1.540, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 160, thickness: 4, weight: 2.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 180, thickness: 4.4, weight: 2.490, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 200, thickness: 4.9, weight: 3.050, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 225, thickness: 5.5, weight: 3.860, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 250, thickness: 6.2, weight: 4.830, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 280, thickness: 6.9, weight: 5.980, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 315, thickness: 7.7, weight: 7.520, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 355, thickness: 8.7, weight: 9.550, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 400, thickness: 9.8, weight: 12.100, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 450, thickness: 11.2, weight: 15.300, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 500, thickness: 12.3, weight: 19.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 560, thickness: 13.7, weight: 23.600, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 630, thickness: 15.4, weight: 29.900, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 710, thickness: 17.4, weight: 38.000, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 800, thickness: 19.6, weight: 48.100, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 900, thickness: 22, weight: 60.800, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1000, thickness: 24.5, weight: 75.200, thickness_unit: 'mm', diameter_unit: 'mm' },
+                        { diameter: 1200, thickness: 29.4, weight: 108.000, thickness_unit: 'mm', diameter_unit: 'mm' }
+                    ]
                 }
             }
         };
@@ -711,3 +851,4 @@
     </script>
 </body>
 </html>
+
