--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             box-shadow: 0 8px 25px rgba(0,0,0,0.25);
             object-fit: cover;
             transition: var(--transition);
-            background-image: url('alfagr_logo.jpg'); /* ensure file alfagr_logo.jpg exists next to index.html */
+            background-image: url('alfagr_logo.png'); /* ensure file alfagr_logo.png exists next to index.html */
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
@@ -851,6 +851,7 @@
     </script>
 </body>
 </html>
+
 
 
 
