--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         .logo {
             width: 150px;
             height: 150px;
+            border-radius: 50%;
             margin: 0 auto 20px;
             box-shadow: 0 8px 25px rgba(0,0,0,0.25);
             object-fit: cover;
@@ -851,6 +852,7 @@
     </script>
 </body>
 </html>
+
 
 
 
