--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             border-radius: 50%;
             margin: 0 auto 20px;
             box-shadow: 0 8px 25px rgba(0,0,0,0.25);
+            background-color: black;
             object-fit: cover;
             transition: var(--transition);
             background-image: url('alfagr_logo.png'); /* ensure file alfagr_logo.png exists next to index.html */
@@ -852,6 +853,7 @@
     </script>
 </body>
 </html>
+
 
 
 
