--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <div class="header">
             <div class="logo-container">
                 <div class="logo"></div>
-                <h1>AL FAGR CO. for Plastic Pipes Industry</h1>
+                <h1>AL FAGR CO. For Plastic Pipes Industry</h1>
                 <h2>u-PVC - HDPE | Advanced Technical Specification System</h2>
             </div>
         </div>
@@ -853,6 +853,7 @@
     </script>
 </body>
 </html>
+
 
 
 
