--- a/index.html
+++ b/index.html
@@ -276,14 +276,14 @@
                 <div class="form-grid">
                     <div class="form-group">
                         <div>
-  <label for="pipeType">Pipe Type</label>
-  <small>Select between Unplasticized Polyvinyl Chloride (U.PVC) and High-Density Polyethylene (HDPE)</small>
-  <select id="pipeType">
-    <option value="">-- Select --</option>
-    <option value="upvc">U.PVC</option>
-    <option value="hdpe">HDPE</option>
-  </select>
-</div>
+<label for="pipeType" class="required">Pipe Type:</label>
+                        <div class="input-container">
+                            <i class="fas fa-pipe input-icon"></i>
+                            <select id="pipeType">
+                                <option value="">Select pipe type</option>
+                                <option value="pvc">U.PVC</option>
+                                <option value="hdpe">HDPE</option>
+                            </select>
                     </div>
 
                     <div class="form-group">
@@ -853,6 +853,7 @@
     </script>
 </body>
 </html>
+
 
 
 
