--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
                     <div class="form-group">
                         <div>
 <label for="pipeType" class="required">Pipe Type:</label>
+                            <small>Select between Unplasticized Polyvinyl Chloride (U.PVC) and High-Density Polyethylene (HDPE)</small>
                         <div class="input-container">
                             <i class="fas fa-pipe input-icon"></i>
                             <select id="pipeType">
@@ -853,6 +854,7 @@
     </script>
 </body>
 </html>
+
 
 
 
