--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
 
                     <div class="form-group">
                         <label for="diameterInput" class="required">Outer Diameter:</label>
+                        <small>Select between 10 mm to 800 mm outer diameter for U.PVC, and 20 mm to 1200 mm for HDPE</small>
                         <div class="input-container">
                             <i class="fas fa-ruler input-icon"></i>
                             <input type="text" id="diameterInput" list="diameterList" placeholder="Search or select diameter">
@@ -298,6 +299,7 @@
                     
                     <div class="form-group">
                         <label for="pressureInput" class="required">Operating Pressure (Bar):</label>
+                        <small>Available pressure ratings will be displayed based on the selected diameter</small>
                         <div class="input-container">
                             <i class="fas fa-tachometer-alt input-icon"></i>
                             <input type="text" id="pressureInput" list="pressureList" placeholder="Search or select pressure">
@@ -307,6 +309,7 @@
 
                     <div class="form-group">
                         <label for="specification" class="required">Technical Specification:</label>
+                        <small>The applied international standard specification</small>
                         <div class="input-container">
                             <i class="fas fa-file-contract input-icon"></i>
                             <input type="text" id="specification" readonly placeholder="Specification will appear here">
@@ -854,6 +857,7 @@
     </script>
 </body>
 </html>
+
 
 
 
