--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
                 <div class="results-container">
                     <div class="result-card">
                         <h3>Thickness</h3>
+                        <small>The pipe wall thickness will be displayed based on the selected outer diameter and pressure rating</small>
                         <div class="result-value" id="thicknessResult">--</div>
                         <span class="result-unit" id="thicknessUnit">mm</span>
                     </div>
@@ -857,6 +858,7 @@
     </script>
 </body>
 </html>
+
 
 
 
