--- a/index.html
+++ b/index.html
@@ -706,20 +706,8 @@
         const specificationInput = document.getElementById('specification');
 
         /* ----------------- logic functions (UNCHANGED) ----------------- */
-        function populateDiameters() {
-            const selectedType = pipeTypeSelect.value;
-            diameterList.innerHTML = "<option value=''>-- Select Diameter --</option>";
-            pressureList.innerHTML = "<option value=''>-- Select Pressure --</option>";
-            diameterInput.value = '';
-            pressureInput.value = '';
-            specificationInput.value = selectedType ? pipeData[selectedType].spec : '';
-            calculateResults();
-            
-            if (!selectedType) {
-                return;
-            }
-
-            const allDiameters = new Set();
+        بص الكود بتاع القطر كامل اهو عدله 
+const allDiameters = new Set();
             for (const pressure in pipeData[selectedType].data) {
                 pipeData[selectedType].data[pressure].forEach(item => {
                     allDiameters.add(JSON.stringify({
@@ -740,7 +728,6 @@
             });
         }
 }
-
         function populatePressures() {
             const selectedType = pipeTypeSelect.value;
             const selectedDiameter = parseFloat(diameterInput.value);
@@ -858,6 +845,7 @@
     </script>
 </body>
 </html>
+
 
 
 
