--- a/index.html
+++ b/index.html
@@ -273,6 +273,15 @@
             margin: 20px auto;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4LZ5ZPZ699"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4LZ5ZPZ699');
+</script>
 </head>
 <body>
 
@@ -950,3 +959,4 @@
     </script>
 </body>
 </html>
+
