--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <div class="form-grid">
                     <div class="form-group">
                         <label for="pipeType" class="required">Pipe Type:</label>
-                        <small>Unplasticized Polyvinyl Chloride(u.PVC), High-Density Polyethylene(HDPE)and polyproplyne(PPR)(</small>
+                        <small>Unplasticized Polyvinyl Chloride(u.PVC), High-Density Polyethylene(HDPE)and polyproplyne(PPR)</small>
                         <div class="input-container">
                             <i class="fas fa-pipe input-icon"></i>
                             <select id="pipeType">
@@ -989,4 +989,5 @@
     </script>
 </body>
 </html>
+
 
