--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
                     <div class="form-group">
                         <label for="diameterInput" class="required">Outer Diameter:</label>
-                        <small>Select the outer diameter (all diameters according to german DIN specifications</small>
+                        <small>Select the outer diameter (all diameters according to german DIN specifications)</small>
                         <div class="input-container">
                             <i class="fas fa-ruler input-icon"></i>
                             <input type="text" id="diameterInput" list="diameterList" placeholder="Search or select diameter">
@@ -989,5 +989,6 @@
     </script>
 </body>
 </html>
+
 
 
